# noro

./: .gitignore  LICENSE  README.md  biome.json  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: app.tsx  auth.ts  config.ts  main.tsx  rounded.ts  styles.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/extension/: manifest.json  package.json  popup.html  styles.css  tsconfig.json
apps/extension/src/: api.ts  autofill.ts  background.ts  constants.ts  content.ts  credentials.ts  crypto.ts  detector.ts  popup.ts  session.ts  types.ts  vault.ts
apps/ios/noro/: ContentView.swift  Info.plist  noroApp.swift
apps/ios/noro.xcodeproj/: project.pbxproj
apps/mobile/: .gitignore  app.json  package.json
apps/mobile-core/: Cargo.toml  uniffi.toml
apps/mobile-core/bindings/: NoroCore.swift  NoroCoreFFI.h  NoroCoreFFI.modulemap
apps/mobile-core/bindings/sh/noro/core/: noro_mobile_core.kt
apps/mobile-core/src/: crypto.rs  lib.rs  sync.rs  twoskd.rs  vault.rs
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/components/: avatar.tsx  badge.tsx  button.tsx  card.tsx  empty.tsx  fieldrow.tsx  header.tsx  icon.tsx  icons.tsx  index.tsx  input.tsx  itemdetail.tsx  itemform.tsx  itemrow.tsx  loading.tsx  tagsinput.tsx  toast.tsx  typepicker.tsx  types.ts
apps/mobile/lib/: api.ts  (+11 more)
apps/web/: .gitignore  package.json  prisma.config.ts  proxy.ts
(+378 files in other folders)
