[package]
name = "noro-mobile-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "noro_mobile_core"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bindgen.rs"
